Add Redis (distributed cache)

--- a/BlazorServer/Pages/FetchData.razor
+++ b/BlazorServer/Pages/FetchData.razor
@@ -1,18 +1,26 @@
 ﻿@page "/fetchdata"
 
 @using BlazorServer.Data
+@using BlazorServer.Extentions
 @inject WeatherForecastService ForecastService
+@inject IDistributedCache cache
 
 <h1>Weather forecast</h1>
 
 <p>This component demonstrates fetching data from a service.</p>
+<button class="btn btn-primary" @onclick="LoadForecast">Load data </button>
 
-@if (forecasts == null)
+@if (forecasts is null && loadLocation =="")
+{
+    <p><em>Click on th button to load data</em></p>
+}
+else if (forecasts == null)
 {
     <p><em>Loading...</em></p>
 }
 else
 {
+    <div class="h3 @isCacheData">@loadLocation</div>
     <table class="table">
         <thead>
             <tr>
@@ -38,9 +46,37 @@ else
 
 @code {
     private WeatherForecast[] forecasts;
+    private string loadLocation = "";
+    private string isCacheData = "";
 
-    protected override async Task OnInitializedAsync()
+    //protected override async Task OnInitializedAsync()
+    //{
+    //    forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+    //}
+
+    private async Task LoadForecast()
     {
-        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+        forecasts = null;
+        loadLocation = null;
+
+        string recordKey = "WeatherForecast_" + DateTime.Now.ToString("yyyyMMdd_hhmm");
+
+        forecasts = await cache.GetRecordAsync<WeatherForecast[]>(recordKey);
+
+        if(forecasts is null)
+        {
+            forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+            loadLocation = $"Loaded from API at {DateTime.Now}";
+
+            isCacheData = "";
+
+            await cache.SetRecordAsync(recordKey,forecasts);
+        }
+        else
+        {
+            loadLocation = $"Loaded from cache at {DateTime.Now}";
+
+            isCacheData = "text-danger";
+        }
     }
 }
